examples/observability/manifests/grafana-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  gateways:
    - istio-system/istio-ingressgateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: "/monitoring"
      route:
        - destination:
            host: prometheus-operator-grafana
      headers:
        request:
          remove:
            - authorization
    - match:
        - uri:
            prefix: "/metrics"
      redirect:
        uri: "/monitoring"
    - match:
        - uri:
            prefix: "/grafana"
      redirect:
        uri: "/monitoring"
