examples/observability/manifests/jaeger-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
spec:
  gateways:
    - istio-system/istio-ingressgateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: "/tracing"
      route:
        - destination:
            host: jaeger-query
            port:
              number: 16686
    - match:
        - uri:
            prefix: "/jaeger"
      redirect:
        uri: "/tracing"
